[gd_scene load_steps=5 format=3 uid="uid://bdt5w77weajbg"]

[ext_resource type="Script" path="res://Scripts/Minigames/Detector.gd" id="1_0x3ca"]
[ext_resource type="Texture2D" uid="uid://dtr6sl6i4ngy2" path="res://Sprites/UI/arrow_left.png" id="2_bkp3u"]
[ext_resource type="Texture2D" uid="uid://bxplxgkm8wcm8" path="res://Sprites/UI/empty_select.png" id="3_1wthp"]
[ext_resource type="FontFile" uid="uid://biglirdu86eux" path="res://Fonts/ArsenalSC-Bold.ttf" id="4_72ncc"]

[node name="Detector" type="Node2D"]
script = ExtResource("1_0x3ca")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(5.29438e-07, 0.469254, 0.396372, 1)

[node name="BackHome" type="TextureButton" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -137.0
offset_top = 40.0
offset_right = -27.0
offset_bottom = 142.0
grow_horizontal = 0
texture_normal = ExtResource("2_bkp3u")
stretch_mode = 5

[node name="StartBtn" type="TextureRect" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = 161.0
offset_right = 104.5
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1wthp")

[node name="Label" type="Label" parent="CanvasLayer/GameMenu/StartBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_72ncc")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = -333.0
offset_right = 290.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
fit_content = true

[node name="Title" type="Label" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 163.0
offset_right = 130.0
offset_bottom = 244.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_72ncc")
theme_override_font_sizes/font_size = 64
text = "Detector"

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -339.0
offset_right = 166.0
offset_bottom = -258.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_72ncc")
theme_override_font_sizes/font_size = 64
text = "High Score"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="CanvasLayer/GameMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -229.0
offset_right = 166.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_72ncc")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
